# SimpleSiteMonitoring

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.runner  LICENSE  README.md  changelog.md  database.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  runner.py
data/: config_sample.json
models/: models.py
routes/: home.py
static/css/: history.css  home.css  layout.css  navbar.css  settings.css  sites.css
static/js/: history.js  home.js  layout.js  navbar.js  settings.js  sites.js
templates/: history.html  home.html  layout.html  navbar.html  settings.html  sites.html
